[package]
name = "agat"
version = "0.1.0"
authors = ["Hao Lian <hi@haolian.org>"]
edition = "2018"

[dependencies]
tui = "0.5"
termion = "1.5"
unicode-width = "0.1"
failure = "0.1"
rand = "0.6"
github-rs = "0.7"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
http = "0.1"
